--- a/.gitignore
+++ b/.gitignore
@@ -16,21 +16,55 @@ Thumbs.db
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Dependencies
-node_modules/
-vendor/
+/node_modules
+/.pnp
+.pnp.js
 
 # Environment
 .env
 .env.local
 .env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Build output
-dist/
-build/
-out/
+/build
+/dist
 
 # Cache
 .cache/
-.temp/ 
+.temp/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Misc
+credentials.json
+service-account.json
+
+# IDE
+*.sublime-project
+*.sublime-workspace 
